--- a/build.gradle
+++ b/build.gradle
@@ -12,22 +12,6 @@ buildscript {
         ext.artifactoryUsername = System.getenv('ARTIFACTORY_USERNAME')
         ext.artifactoryPassword = System.getenv('ARTIFACTORY_PASSWORD')
     }
-
-//    repositories {
-//        maven {
-//            url "https://snapchat.artifactoryonline.com/snapchat/plugins"
-//            credentials {
-//                if (System.getenv('CIRCLECI')) {
-//                    username = artifactoryUsername
-//                    password = artifactoryPassword
-//                }
-//                else {
-//                    username = "Yunao.Liu"
-//                    password = "Snapchat1"
-//                }
-//            }
-//        }
-//    }
 }
 
 allprojects {
@@ -38,10 +22,12 @@ allprojects {
                 if (System.getenv('CIRCLECI')) {
                     username = artifactoryUsername
                     password = artifactoryPassword
+                    println "I'm here, username = $username, password = $password"
                 }
                 else {
                     username = "Yunao.Liu"
                     password = "Snapchat1"
+                    println "I'm here, username = $username, password = $password"
                 }
             }
         }
