--- a/module1/build.gradle
+++ b/module1/build.gradle
@@ -4,21 +4,21 @@ dependencies {
     compile "com.google.guava:guava:17.0"
 }
 
-task filename {
-
-    def sourceFile = file(projectDir.toString() + "/src/main/java/com/aoao/TestGradle/module1/DoubleAdd.java")
-    def destDir = file(projectDir.toString())
-    inputs.file sourceFile
-    outputs.dir destDir
-
-    doLast {
-        def destFile = new File(destDir, "tmp.txt")
-
-        Random random = new Random(System.currentTimeMillis())
-        def randNum = random.nextInt()
-        destFile.text = "Random number is $randNum"
-    }
-}
+//task filename {
+//
+//    def sourceFile = file(projectDir.toString() + "/src/main/java/com/aoao/TestGradle/module1/DoubleAdd.java")
+//    def destDir = file(projectDir.toString())
+//    inputs.file sourceFile
+//    outputs.dir destDir
+//
+//    doLast {
+//        def destFile = new File(destDir, "tmp.txt")
+//
+//        Random random = new Random(System.currentTimeMillis())
+//        def randNum = random.nextInt()
+//        destFile.text = "Random number is $randNum"
+//    }
+//}
 
 //task annouceBuilt << {
 //    print "Project is built, the result is: "
