--- a/build.gradle
+++ b/build.gradle
@@ -102,9 +102,11 @@ subprojects { module ->
 }
 
 task checkCheckSumExists {
-    def fileName = projectDir.toString() + "/.gradle/2.3/taskArtifacts/fileHashes.bin"
-    println fileName
-    println "Check sum file exists: " + file(fileName).exists().toString()
+    def folderName = file(projectDir.toString() + "/.gradle/2.3/taskArtifacts/")
+    def collection = files { folderName.listFiles() }
+    collection.each {
+        println it
+    }
 }
 
 
