Ignore some files

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
 .classpath
 .project
-.google_apis
 .DS_Store
-.settings
-.idea
-.gradle
-.gradle/*
-.classpath
-.project
+.settings/
+.idea/
+.gradle/
+.classpath/
+.project/
 *.iml
 *.ipr
 *.iws
@@ -15,12 +13,3 @@
 *~
 out
 build
-.idea/workspace.xml
-
-.gradle/2.3/taskArtifacts/fileHashes.bin
-
-.gradle/2.3/taskArtifacts/fileSnapshots.bin
-
-.gradle/2.3/taskArtifacts/outputFileStates.bin
-
-.gradle/2.3/taskArtifacts/taskArtifacts.bin
