--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,7 @@ machine:
 dependencies:
   override:
     - ./gradlew resolveAllDependencies
+    - ./gradlew test
   cache_directories:
     - ./.gradle
     - ./build
@@ -21,4 +22,4 @@ dependencies:
 
 test:
   override:
-    - ./gradlew test
+    # - ./gradlew test
