test if rebuild 2

--- a/circle.yml
+++ b/circle.yml
@@ -16,6 +16,7 @@ dependencies:
     - ./gradlew resolveAllDependencies
     - ./gradlew test
   cache_directories:
+    - ./out
     - ./.gradle
     - ./build
     - ~/.gradle
